# apertium-eu-en

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  apertium-eu-en.colloc.t1x  apertium-eu-en.en.metadix  apertium-eu-en.eu-en.dix  apertium-eu-en.eu-en.t1x  apertium-eu-en.eu-en.t2x  apertium-eu-en.eu-en.t3x  configure.ac  lexchoicebil.xsl  modes.xml  pending-tests.sh  testvoc-eu-en
corpus/: metamorphosis.tmx
dev/: adj-izo  chunk-to-post.sh  cross-model-eu-es-en.xml  verbs-to-add
dev/bidix/: pending_adjectives.txt  pending_adverbs.txt  pending_conjunctions.txt  pending_determiners.txt  pending_nouns.txt  pending_numerals.txt  pending_pronouns.txt  pending_proper_nouns.txt
test/: eu-en-pending-chunker3-expected.txt  eu-en-pending-generator-expected.txt  eu-en-pending-input.txt  eu-en-pending-interchunk-expected.txt  eu-en-pending-morph-expected.txt  eu-en-pending-postchunk-expected.txt  eu-en-pending-postgen-expected.txt  eu-en-pending-postgen-gold.txt  eu-en-pending-pretransfer-expected.txt  eu-en-pending-tagger-expected.txt  tests.json
